--- a/src/main/resources/Frontend/FrontBillet.fxml
+++ b/src/main/resources/Frontend/FrontBillet.fxml
@@ -69,7 +69,7 @@
                         <ComboBox fx:id="eventSelection" promptText="Sélectionner un événement" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                     </children>
                 </GridPane>
-                <Button text="✔ Confirmer la Réservation" style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-border-radius: 12px; -fx-padding: 10px;"/>
+                <Button text="✔ Confirmer la Réservation"  onAction="#createBilletFront" style="-fx-background-color: #9b59b6; -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-border-radius: 12px; -fx-padding: 10px;"/>
             </children>
         </VBox>
     </children>
